[project]
name = "comfyui-openai-compatible-image"
version = "0.1.0"
description = "ComfyUI custom nodes for OpenAI-compatible image generation and editing endpoints."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "numpy",
  "Pillow",
  "requests",
]

[project.urls]
Repository = "https://github.com/wennatre/ComfyUI-OpenAI-Compatible-Image"
